--- a/index.html
+++ b/index.html
@@ -47,31 +47,29 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:40vw; max-width:90vw;
-  padding:28px;
+  width:28vw;          /* narrower */
+  max-width:85vw;
+  height:auto;
+  padding:32px 24px;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
   border-radius:18px;
   color:#fff;
-  text-align:center;
+  text-align:center;     /* all text centered */
   font-size:1.05rem;
-  line-height:1.4;
+  line-height:1.5;
   pointer-events:auto;
-  display:flex; flex-direction:column; justify-content:space-between;
+  display:flex; flex-direction:column; justify-content:center;
 }
-#overlay-content p { margin:0 0 10px 0; }
+#overlay-content p { margin:0 0 10px 0; color:#fff; }
 
 /* Instructions */
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:12px; color:#fff; }
+#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
 #instructions-list { text-align:center; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
 #instructions-list p { margin:6px 0 0 0; }
 
-/* spacing */
-#instructions-list + .link-spacing { height:2em; }
-#last-bullet-spacing { height:2em; }
-
 /* Dismiss message line (small, off-gray) */
-#dismiss-message { font-size:0.95rem; color:#d0d0d0; text-align:center; }
+#dismiss-message { margin-top:16px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
 /* tooltip preview */
 #tooltip-preview {
@@ -90,27 +88,42 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
 
-/* top panels - dynamically stacked */
-.top-panel {
+/* hotspot panel */
+#hotspot-panel {
   position: fixed;
+  top: 18px;
   left:50%;
-  transform:translateX(-50%);
+  transform: translateX(-50%);
   background: rgba(0,0,0,0.20);
   backdrop-filter: blur(10px);
   padding:12px 18px;
   border-radius:14px;
   color:#fff;
-  font-size:0.96rem;
+  font-size:0.98rem;
   text-align:center;
   max-width:82%;
   z-index:20;
+  display:none;
 }
 
-/* hotspot panel */
-#hotspot-panel { display:none; }
-
 /* 360 video panel */
-#video-link-panel { display:none; cursor:pointer; }
+#video-link-panel {
+  position: fixed;
+  top: calc(18px + 72px + 20px); /* slightly lower under hotspot */
+  left:50%;
+  transform:translateX(-50%);
+  background: rgba(0,0,0,0.20);
+  backdrop-filter: blur(10px);
+  padding:10px 14px;
+  border-radius:12px;
+  color:#fff;
+  font-size:0.96rem;
+  text-align:center;
+  max-width:66%;
+  z-index:20;
+  cursor:pointer;
+  display:none;
+}
 
 /* youtube modal */
 #youtube-overlay {
@@ -135,7 +148,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   border-radius:16px; padding:16px;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
-#qr-content img { max-width:30vw; max-height:30vh; object-fit:contain; border-radius:8px; }
+#qr-content img { width:12vw; max-width:250px; object-fit:contain; border-radius:8px; }
 #qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
 
 /* QR and VR buttons */
@@ -149,13 +162,15 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 /* responsive adjustments */
 @media (max-width:900px) {
-  #overlay-content { width:86vw; padding:18px; font-size:0.98rem; }
-  #qr-content img { max-width:48vw; max-height:40vh; }
+  #overlay-content { width:40vw; padding:28px; font-size:0.98rem; }
+  #qr-content img { width:20vw; }
+  #video-link-panel { top: calc(18px + 88px + 20px); max-width:86%; }
 }
 @media (max-width:480px) {
-  #overlay-content { width:92vw; padding:14px; font-size:0.95rem; }
-  #qr-content img { max-width:64vw; max-height:32vh; }
-  .top-panel { max-width:88%; font-size:0.9rem; padding:10px; }
+  #overlay-content { width:60vw; padding:18px; font-size:0.95rem; }
+  #qr-content img { width:40vw; }
+  #hotspot-panel { font-size:0.9rem; padding:10px; }
+  #video-link-panel { font-size:0.95rem; top: calc(18px + 86px + 20px); max-width:88%; }
 }
 </style>
 </head>
@@ -163,49 +178,45 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 <div id="panorama"></div>
 
-<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
-    <div>
-      <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
-      <div class="link-spacing"></div>
-      <div id="instructions-line">Instructions</div>
-      <div id="instructions-list">
-        <p>• Click and drag to look around.</p>
-        <p>• Scroll to zoom in/out.</p>
-        <p>• Use fullscreen button for best experience.</p>
-      </div>
-      <div id="last-bullet-spacing"></div>
-      <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
+    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+
+    <div style="height:16px;"></div>
+
+    <div id="instructions-line">Instructions</div>
+    <div id="instructions-list">
+      <p>• Click and drag to look around.</p>
+      <p>• Scroll to zoom in/out.</p>
+      <p>• Use fullscreen button for best experience.</p>
     </div>
+
+    <div style="height:32px;"></div>
+    <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
-<!-- Tooltip preview -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
-  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
-  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener">https://linktr.ee/lexofdystopia</a></div>
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
+  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
-<!-- Top panels -->
-<div id="hotspot-panel" class="top-panel" aria-hidden="true">
+<div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
-<div id="video-link-panel" class="top-panel" aria-hidden="true">
+<div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
 <div id="license-bar">Loading license...</div>
 
-<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
-<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
@@ -213,7 +224,6 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   </div>
 </div>
 
-<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -234,7 +244,6 @@ const viewer = pannellum.viewer('panorama', {
   compass: false
 });
 
-/* refs */
 const overlay = document.getElementById('overlay');
 const overlayContent = document.getElementById('overlay-content');
 const hotspotPanel = document.getElementById('hotspot-panel');
@@ -250,99 +259,82 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-/* overlay dismissal - click anywhere except hyperlink */
-document.addEventListener('click', (ev)=>{
-  if(overlay.style.display !== 'none') {
-    if(!ev.target.closest('#preview-link')) {
-      overlay.style.display='none';
-      overlay.setAttribute('aria-hidden','true');
-      hotspotPanel.style.display='block';
-      videoLinkPanel.style.display='block';
+overlay.addEventListener('click', (ev) => {
+  if(ev.target.closest('#preview-link')) return;
+  overlay.setAttribute('aria-hidden','true');
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+  hotspotPanel.classList.add('pulse-white');
+  setTimeout(()=> hotspotPanel.classList.remove('pulse-white'),2000);
+  detectVRHeadset().then(info=>{
+    if(info){
+      vrBtn.style.display='block';
+      vrBtn.setAttribute('aria-hidden','false');
+      if(!hotspotPanel.dataset.vrmsg){
+        hotspotPanel.dataset.vrmsg='1';
+        const em=document.createElement('div');
+        em.style.marginTop='8px';
+        em.style.fontSize='0.9rem';
+        em.style.color='#dcdcdc';
+        em.innerHTML='<em>Press the VR button under the QR button to launch immersive VR.</em>';
+        hotspotPanel.appendChild(em);
+      }
     }
-  }
+  });
 });
 
-/* tooltip hover */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>licenseBar.textContent=text).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+
 function showTooltip(){
-  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
-  const rect = previewLink.getBoundingClientRect();
-  const ttWidth = tooltip.offsetWidth;
-  const ttHeight = tooltip.offsetHeight;
-  let top = rect.top - ttHeight - 10;
-  let left = rect.left + rect.width/2 - ttWidth/2;
-  if(top < 8) top = rect.bottom + 10;
-  if(left < 8) left = 8;
-  if(left + ttWidth > window.innerWidth-8) left = window.innerWidth-ttWidth-8;
+  tooltip.style.display='block';
+  tooltip.setAttribute('aria-hidden','false');
+  tooltip.offsetHeight;
+  const rect=previewLink.getBoundingClientRect();
+  const ttWidth=tooltip.offsetWidth;
+  const ttHeight=tooltip.offsetHeight;
+  let top=rect.top-ttHeight-10;
+  let left=rect.left+rect.width/2-ttWidth/2;
+  if(top<8) top=rect.bottom+10;
+  if(left<8) left=8;
+  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
   tooltip.style.left=Math.round(left)+'px';
   tooltip.style.top=Math.round(top)+'px';
 }
-previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-tooltip.addEventListener('mouseenter', showTooltip);
-tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click', e=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank'); });
-tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
+previewLink.addEventListener('mouseenter',showTooltip);
+previewLink.addEventListener('mouseleave',()=>{setTimeout(()=>{if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');}},80);});
+tooltip.addEventListener('mouseenter',showTooltip);
+tooltip.addEventListener('mouseleave',()=>{tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');});
+previewLink.addEventListener('click',(e)=>{e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener');});
+tooltipLink.addEventListener('click',(e)=>{e.stopPropagation();});
 
-/* top panels positioning dynamically */
-function stackTopPanels(){
-  let topOffset=12;
-  [hotspotPanel, videoLinkPanel].forEach(p=>{
-    if(p.style.display!=='none'){
-      p.style.top = topOffset+'px';
-      topOffset += p.offsetHeight + 8;
-    }
-  });
-}
-setInterval(stackTopPanels, 100);
-
-/* video panel click -> YouTube */
-videoLinkPanel.addEventListener('click', e=>{
+videoLinkPanel.addEventListener('click',(e)=>{
   e.stopPropagation();
-  youtubeFrame.src = "https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
+  youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
   requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
 });
-youtubeOverlay.addEventListener('click', ()=>{
-  youtubeOverlay.style.opacity=0;
-  setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);
-});
+youtubeOverlay.addEventListener('click',()=>{youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);});
 
-/* QR overlay */
-qrBtn.addEventListener('click', e=>{
-  e.stopPropagation();
-  qrOverlay.style.display='flex';
-  requestAnimationFrame(()=> qrOverlay.style.opacity=1);
-});
-qrOverlay.addEventListener('click', ()=>{
-  qrOverlay.style.opacity=0;
-  setTimeout(()=> qrOverlay.style.display='none',300);
-});
-qrContent.addEventListener('click', e=>e.stopPropagation());
+qrBtn.addEventListener('click',(e)=>{e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1);});
+qrOverlay.addEventListener('click',()=>{qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300);});
+qrContent.addEventListener('click', (e)=> e.stopPropagation());
 
-/* LICENSE load */
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>{ licenseBar.textContent=text; }).catch(()=>{ licenseBar.textContent='LICENSE file not found.'; });
-
-/* VR detection */
 async function detectVRHeadset(){
   if(navigator.xr && navigator.xr.isSessionSupported){
-    try{ const supported = await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return true; }catch{}
+    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR',model:'immersive-vr'}; }catch(err){}
   }
-  const ua=navigator.userAgent||''; return /OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua);
+  const ua=navigator.userAgent||'';
+  if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'};
+  return null;
 }
-detectVRHeadset().then(supported=>{ if(supported){ vrBtn.style.display='block'; vrBtn.setAttribute('aria-hidden','false'); } });
 
-/* VR button opens new page */
-vrBtn.addEventListener('click', e=>{
-  e.stopPropagation();
-  const w = window.open('vr.html','_blank','noopener');
-  if(!w) alert('Popup blocked. Allow popups for immersive VR.');
-});
+vrBtn.addEventListener('click',(e)=>{e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.')});
 
-/* ESC keyboard closes overlays */
-document.addEventListener('keydown', e=>{
+document.addEventListener('keydown',(e)=>{
   if(e.key==='Escape'){
-    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);}
-    if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
+    if(youtubeOverlay.style.display==='flex'){youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+    if(qrOverlay.style.display==='flex'){qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
   }
 });
 </script>
