--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ html,body { height:100%; margin:0; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
 #vr-button, #top-qr-button { user-select: none; }
-body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; }
+body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; text-align:center; }
 
 /* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
@@ -47,29 +47,28 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:28vw;          /* narrower */
-  max-width:85vw;
-  height:auto;
-  padding:32px 24px;
+  width:40vw; height:55vh;
+  max-width:70vw; max-height:80vh;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
+  padding:24px;
   border-radius:18px;
   color:#fff;
-  text-align:center;     /* all text centered */
+  display:flex; flex-direction:column; justify-content:space-between; align-items:center;
+  text-align:center;
   font-size:1.05rem;
   line-height:1.5;
-  pointer-events:auto;
-  display:flex; flex-direction:column; justify-content:center;
 }
 #overlay-content p { margin:0 0 10px 0; color:#fff; }
+#instructions-line { text-decoration:underline; font-weight:700; margin-top:12px; color:#fff; }
+#instructions-list { text-align:center; margin-top:12px; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:6px 0; }
 
-/* Instructions */
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; max-width:480px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:6px 0 0 0; }
+/* spacing for newlines */
+.spacer { height:1.5em; }
 
-/* Dismiss message line (small, off-gray) */
-#dismiss-message { margin-top:16px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+/* Dismiss message line */
+#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; }
 
 /* tooltip preview */
 #tooltip-preview {
@@ -109,7 +108,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 /* 360 video panel */
 #video-link-panel {
   position: fixed;
-  top: calc(18px + 72px + 20px); /* slightly lower under hotspot */
+  top: calc(18px + 80px + 12px);
   left:50%;
   transform:translateX(-50%);
   background: rgba(0,0,0,0.20);
@@ -147,8 +146,9 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
   border-radius:16px; padding:16px;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
+  text-align:center;
 }
-#qr-content img { width:12vw; max-width:250px; object-fit:contain; border-radius:8px; }
+#qr-content img { width:12vw; max-width:240px; height:auto; object-fit:contain; border-radius:8px; }
 #qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
 
 /* QR and VR buttons */
@@ -162,15 +162,15 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 /* responsive adjustments */
 @media (max-width:900px) {
-  #overlay-content { width:40vw; padding:28px; font-size:0.98rem; }
-  #qr-content img { width:20vw; }
-  #video-link-panel { top: calc(18px + 88px + 20px); max-width:86%; }
+  #overlay-content { width:60vw; height:55vh; padding:18px; font-size:0.98rem; }
+  #qr-content img { width:18vw; }
+  #video-link-panel { top: calc(18px + 100px + 16px); max-width:86%; }
 }
 @media (max-width:480px) {
-  #overlay-content { width:60vw; padding:18px; font-size:0.95rem; }
-  #qr-content img { width:40vw; }
+  #overlay-content { width:80vw; height:60vh; padding:14px; font-size:0.95rem; }
+  #qr-content img { width:28vw; }
   #hotspot-panel { font-size:0.9rem; padding:10px; }
-  #video-link-panel { font-size:0.95rem; top: calc(18px + 86px + 20px); max-width:88%; }
+  #video-link-panel { font-size:0.95rem; top: calc(18px + 110px + 16px); max-width:88%; }
 }
 </style>
 </head>
@@ -178,22 +178,30 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
-    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    <div>
+      <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
-    <div style="height:16px;"></div>
+      <div class="spacer"></div>
 
-    <div id="instructions-line">Instructions</div>
-    <div id="instructions-list">
-      <p>• Click and drag to look around.</p>
-      <p>• Scroll to zoom in/out.</p>
-      <p>• Use fullscreen button for best experience.</p>
+      <div id="instructions-line">Instructions</div>
+      <div id="instructions-list">
+        <p>• Click and drag to look around.</p>
+        <p>• Scroll to zoom in/out.</p>
+        <p>• Use fullscreen button for best experience.</p>
+      </div>
+
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+
     </div>
 
-    <div style="height:32px;"></div>
-    <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
+    <div style="margin-top:10px; text-align:center;">
+      <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
+    </div>
   </div>
 </div>
 
@@ -260,81 +268,58 @@ const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
 overlay.addEventListener('click', (ev) => {
-  if(ev.target.closest('#preview-link')) return;
-  overlay.setAttribute('aria-hidden','true');
-  overlay.style.display='none';
-  hotspotPanel.style.display='block';
-  videoLinkPanel.style.display='block';
-  hotspotPanel.classList.add('pulse-white');
-  setTimeout(()=> hotspotPanel.classList.remove('pulse-white'),2000);
-  detectVRHeadset().then(info=>{
-    if(info){
-      vrBtn.style.display='block';
-      vrBtn.setAttribute('aria-hidden','false');
-      if(!hotspotPanel.dataset.vrmsg){
-        hotspotPanel.dataset.vrmsg='1';
-        const em=document.createElement('div');
-        em.style.marginTop='8px';
-        em.style.fontSize='0.9rem';
-        em.style.color='#dcdcdc';
-        em.innerHTML='<em>Press the VR button under the QR button to launch immersive VR.</em>';
-        hotspotPanel.appendChild(em);
-      }
-    }
-  });
+  if (ev.target.closest && ev.target.closest('#overlay-content')) return;
+  overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
+  hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
 });
 
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>licenseBar.textContent=text).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+previewLink.addEventListener('click', (e) => {
+  e.stopPropagation(); e.preventDefault();
+  window.open('https://linktr.ee/lexofdystopia', '_blank', 'noopener');
+});
 
-function showTooltip(){
-  tooltip.style.display='block';
-  tooltip.setAttribute('aria-hidden','false');
+// tooltip hover
+function showTooltip() {
+  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
   tooltip.offsetHeight;
-  const rect=previewLink.getBoundingClientRect();
-  const ttWidth=tooltip.offsetWidth;
-  const ttHeight=tooltip.offsetHeight;
-  let top=rect.top-ttHeight-10;
-  let left=rect.left+rect.width/2-ttWidth/2;
-  if(top<8) top=rect.bottom+10;
-  if(left<8) left=8;
-  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
-  tooltip.style.left=Math.round(left)+'px';
-  tooltip.style.top=Math.round(top)+'px';
+  const rect = previewLink.getBoundingClientRect();
+  const ttWidth = tooltip.offsetWidth;
+  const ttHeight = tooltip.offsetHeight;
+  let top = rect.top - ttHeight - 10;
+  let left = rect.left + rect.width/2 - ttWidth/2;
+  if (top < 8) top = rect.bottom + 10;
+  if (left < 8) left = 8;
+  if (left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
+  tooltip.style.left = Math.round(left) + 'px';
+  tooltip.style.top = Math.round(top) + 'px';
 }
-previewLink.addEventListener('mouseenter',showTooltip);
-previewLink.addEventListener('mouseleave',()=>{setTimeout(()=>{if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');}},80);});
-tooltip.addEventListener('mouseenter',showTooltip);
-tooltip.addEventListener('mouseleave',()=>{tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');});
-previewLink.addEventListener('click',(e)=>{e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener');});
-tooltipLink.addEventListener('click',(e)=>{e.stopPropagation();});
+previewLink.addEventListener('mouseenter', showTooltip);
+previewLink.addEventListener('mouseleave', ()=> {
+  setTimeout(()=> { if (!tooltip.matches(':hover') && !previewLink.matches(':hover')) {
+    tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } }, 80);
+});
+tooltip.addEventListener('mouseenter', showTooltip);
+tooltip.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
 
-videoLinkPanel.addEventListener('click',(e)=>{
+videoLinkPanel.addEventListener('click', (e)=> {
   e.stopPropagation();
-  youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
+  youtubeFrame.src = "https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
   requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
 });
-youtubeOverlay.addEventListener('click',()=>{youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);});
+youtubeOverlay.addEventListener('click', ()=> { youtubeOverlay.style.opacity=0; setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; }, 280); });
 
-qrBtn.addEventListener('click',(e)=>{e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1);});
-qrOverlay.addEventListener('click',()=>{qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300);});
-qrContent.addEventListener('click', (e)=> e.stopPropagation());
+// QR overlay: clicking anywhere dismisses it, including panel
+qrBtn.addEventListener('click', (e)=> { e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1); });
+qrOverlay.addEventListener('click', ()=> { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
+qrContent.addEventListener('click', ()=> { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
 
-async function detectVRHeadset(){
-  if(navigator.xr && navigator.xr.isSessionSupported){
-    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR',model:'immersive-vr'}; }catch(err){}
-  }
-  const ua=navigator.userAgent||'';
-  if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'};
-  return null;
-}
+fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no')).then(text => { licenseBar.textContent = text; }).catch(()=>{ licenseBar.textContent = 'LICENSE file not found.'; });
 
-vrBtn.addEventListener('click',(e)=>{e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.')});
-
-document.addEventListener('keydown',(e)=>{
-  if(e.key==='Escape'){
-    if(youtubeOverlay.style.display==='flex'){youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
-    if(qrOverlay.style.display==='flex'){qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280);}
+document.addEventListener('keydown', (e)=> {
+  if (e.key==='Escape') {
+    if (youtubeOverlay.style.display==='flex') { youtubeOverlay.style.opacity=0; setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); }
+    if (qrOverlay.style.display==='flex') { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280); }
   }
 });
 </script>
