--- a/index.html
+++ b/index.html
@@ -10,118 +10,56 @@
 /* global */
 * { box-sizing:border-box; }
 html,body { height:100%; margin:0; }
-body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
-#license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
-#vr-button, #top-qr-button { user-select: none; }
-body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; text-align:center; }
+body { font-family:'Saira',sans-serif; overflow:hidden; background:#000; user-select:none; position:relative; }
 
 /* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-/* License bar */
+/* license bar */
 #license-bar {
-  position: fixed;
-  bottom: 12px;
-  left: 50%;
-  transform: translateX(-50%);
-  max-width: 92%;
-  background: rgba(0,0,0,0.18);
-  backdrop-filter: blur(10px);
-  color: #fff;
-  padding: 10px 18px;
-  font-size: 13px;
-  z-index: 12;
-  overflow-y: auto;
-  text-align: center;
-  white-space: pre-wrap;
-  border-radius: 12px;
+  position: fixed; bottom:12px; left:50%; transform:translateX(-50%);
+  max-width:92%; background: rgba(0,0,0,0.18); backdrop-filter:blur(10px);
+  color:#fff; padding:10px 18px; font-size:13px; z-index:12; text-align:center;
+  border-radius:12px; overflow-y:auto; white-space:pre-wrap;
 }
 
-/* Intro overlay - center panel */
-#overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.40);
-  display:flex; align-items:center; justify-content:center;
-  z-index:40;
-}
+/* Intro overlay */
+#overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:40vw; height:55vh;
-  max-width:70vw; max-height:80vh;
-  background: rgba(255,255,255,0.18);
-  backdrop-filter: blur(10px);
-  padding:24px;
-  border-radius:18px;
-  color:#fff;
-  display:flex; flex-direction:column; justify-content:space-between; align-items:center;
-  text-align:center;
-  font-size:1.05rem;
-  line-height:1.5;
+  width: 35vw; max-width:90vw; height:auto; max-height:90vh;
+  background: rgba(255,255,255,0.18); backdrop-filter: blur(10px);
+  padding:24px; border-radius:18px; color:#fff; text-align:center;
+  display:flex; flex-direction:column; justify-content:center; align-items:center;
 }
-#overlay-content p { margin:0 0 10px 0; color:#fff; }
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:12px; color:#fff; }
-#instructions-list { text-align:center; margin-top:12px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:6px 0; }
-
-/* spacing for newlines */
-.spacer { height:1.5em; }
-
-/* Dismiss message line */
-#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; }
+#overlay-content p { margin:8px 0; }
+#instructions-line { text-decoration:underline; font-weight:700; margin:12px 0 6px 0; }
+#instructions-list { margin:6px 0; line-height:1.6em; text-align:center; }
+#instructions-list p { margin:4px 0; }
+#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
 
 /* tooltip preview */
 #tooltip-preview {
-  display:none;
-  position: fixed;
-  width: 280px;
-  background: rgba(0,0,0,0.9);
-  color:#fff;
-  text-align:center;
-  padding:10px;
-  border-radius:10px;
-  z-index:9999;
-  pointer-events:auto;
-  font-size:0.85rem;
-  line-height:1.2;
+  display:none; position:fixed; width:280px; background: rgba(0,0,0,0.9);
+  color:#fff; text-align:center; padding:10px; border-radius:10px;
+  z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
 
 /* hotspot panel */
 #hotspot-panel {
-  position: fixed;
-  top: 18px;
-  left:50%;
-  transform: translateX(-50%);
-  background: rgba(0,0,0,0.20);
-  backdrop-filter: blur(10px);
-  padding:12px 18px;
-  border-radius:14px;
-  color:#fff;
-  font-size:0.98rem;
-  text-align:center;
-  max-width:82%;
-  z-index:20;
-  display:none;
+  position:fixed; top:18px; left:50%; transform:translateX(-50%);
+  background: rgba(0,0,0,0.20); backdrop-filter:blur(10px);
+  padding:12px 18px; border-radius:14px; color:#fff;
+  font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none;
 }
 
 /* 360 video panel */
 #video-link-panel {
-  position: fixed;
-  top: calc(18px + 80px + 12px);
-  left:50%;
-  transform:translateX(-50%);
-  background: rgba(0,0,0,0.20);
-  backdrop-filter: blur(10px);
-  padding:10px 14px;
-  border-radius:12px;
-  color:#fff;
-  font-size:0.96rem;
-  text-align:center;
-  max-width:66%;
-  z-index:20;
-  cursor:pointer;
-  display:none;
+  position: fixed; top:calc(18px + 72px + 24px); left:50%; transform:translateX(-50%);
+  background: rgba(0,0,0,0.20); backdrop-filter:blur(10px); padding:10px 14px;
+  border-radius:12px; color:#fff; font-size:0.96rem; text-align:center; max-width:66%; z-index:20;
+  cursor:pointer; display:none;
 }
 
 /* youtube modal */
@@ -131,8 +69,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #youtube-content {
   background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
-  border-radius:16px; padding:12px;
-  max-width:90%; width:880px; max-height:80%; height:480px;
+  border-radius:16px; padding:12px; max-width:90%; width:880px; max-height:80%; height:480px;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
@@ -144,16 +81,15 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #qr-content {
   background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
-  border-radius:16px; padding:16px;
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
-  text-align:center;
+  border-radius:16px; padding:16px; display:flex; flex-direction:column;
+  align-items:center; justify-content:center;
 }
-#qr-content img { width:12vw; max-width:240px; height:auto; object-fit:contain; border-radius:8px; }
-#qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
+#qr-content img { width: 15vw; max-width:100%; object-fit:contain; border-radius:8px; margin-bottom:12px; }
+#qr-content p { color:#d0d0d0; font-size:0.95rem; text-align:center; }
 
 /* QR and VR buttons */
 #top-qr-button, #vr-button {
-  position:fixed; right: 12px; padding:8px 12px; border-radius:12px;
+  position:fixed; right:12px; padding:8px 12px; border-radius:12px;
   background: rgba(0,0,0,0.18); backdrop-filter: blur(8px);
   color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem;
 }
@@ -162,15 +98,14 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 /* responsive adjustments */
 @media (max-width:900px) {
-  #overlay-content { width:60vw; height:55vh; padding:18px; font-size:0.98rem; }
-  #qr-content img { width:18vw; }
-  #video-link-panel { top: calc(18px + 100px + 16px); max-width:86%; }
+  #overlay-content { width:60vw; font-size:0.98rem; }
+  #video-link-panel { top: calc(18px + 72px + 24px); max-width:86%; }
+  #qr-content img { width:25vw; }
 }
 @media (max-width:480px) {
-  #overlay-content { width:80vw; height:60vh; padding:14px; font-size:0.95rem; }
-  #qr-content img { width:28vw; }
-  #hotspot-panel { font-size:0.9rem; padding:10px; }
-  #video-link-panel { font-size:0.95rem; top: calc(18px + 110px + 16px); max-width:88%; }
+  #overlay-content { width:72vw; font-size:0.95rem; }
+  #video-link-panel { top: calc(18px + 72px + 24px); max-width:88%; }
+  #qr-content img { width:40vw; }
 }
 </style>
 </head>
@@ -181,50 +116,48 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 <!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
-    <div>
-      <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
-      <div class="spacer"></div>
-
-      <div id="instructions-line">Instructions</div>
-      <div id="instructions-list">
-        <p>• Click and drag to look around.</p>
-        <p>• Scroll to zoom in/out.</p>
-        <p>• Use fullscreen button for best experience.</p>
-      </div>
-
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-
+    <div id="instructions-line">Instructions</div>
+    <div id="instructions-list">
+      <p>• Click and drag to look around.</p>
+      <p>• Scroll to zoom in/out.</p>
+      <p>• Use fullscreen button for best experience.</p>
     </div>
 
-    <div style="margin-top:10px; text-align:center;">
-      <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
-    </div>
+    <div style="margin-top:12px;"></div>
+
+    <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
+<!-- tooltip preview -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
-  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview" style="width:100%; height:auto; border-radius:8px; display:block; margin-bottom:8px;">
-  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
+  <div><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
+<!-- Manhattan Beach panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
+<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
+<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
+<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
+<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
@@ -232,6 +165,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   </div>
 </div>
 
+<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -242,14 +176,14 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
-const viewer = pannellum.viewer('panorama', {
-  type: 'equirectangular',
-  panorama: panoURL,
-  autoLoad: true,
-  hfov: 100,
-  showFullscreenCtrl: true,
-  showZoomCtrl: false,
-  compass: false
+const viewer = pannellum.viewer('panorama',{
+  type:'equirectangular',
+  panorama:panoURL,
+  autoLoad:true,
+  hfov:100,
+  showFullscreenCtrl:true,
+  showZoomCtrl:false,
+  compass:false
 });
 
 const overlay = document.getElementById('overlay');
@@ -267,59 +201,76 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-overlay.addEventListener('click', (ev) => {
-  if (ev.target.closest && ev.target.closest('#overlay-content')) return;
-  overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
-  hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
-});
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>{licenseBar.textContent=text}).catch(()=>{licenseBar.textContent='LICENSE file not found.'});
 
-previewLink.addEventListener('click', (e) => {
-  e.stopPropagation(); e.preventDefault();
-  window.open('https://linktr.ee/lexofdystopia', '_blank', 'noopener');
-});
+// Intro dismissal logic
+function dismissOverlay(e){
+  if(e.target.closest('#preview-link')) return; // ignore clicks on "here"
+  overlay.setAttribute('aria-hidden','true');
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+}
+overlay.addEventListener('click', dismissOverlay);
+overlayContent.addEventListener('click', dismissOverlay);
 
-// tooltip hover
-function showTooltip() {
-  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
-  tooltip.offsetHeight;
+// Tooltip hover
+function showTooltip(){
+  tooltip.style.display='block';
+  tooltip.setAttribute('aria-hidden','false');
   const rect = previewLink.getBoundingClientRect();
   const ttWidth = tooltip.offsetWidth;
   const ttHeight = tooltip.offsetHeight;
   let top = rect.top - ttHeight - 10;
   let left = rect.left + rect.width/2 - ttWidth/2;
-  if (top < 8) top = rect.bottom + 10;
-  if (left < 8) left = 8;
-  if (left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
-  tooltip.style.left = Math.round(left) + 'px';
-  tooltip.style.top = Math.round(top) + 'px';
+  if(top<8) top=rect.bottom+10;
+  if(left<8) left=8;
+  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
+  tooltip.style.left = left+'px';
+  tooltip.style.top = top+'px';
 }
 previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=> {
-  setTimeout(()=> { if (!tooltip.matches(':hover') && !previewLink.matches(':hover')) {
-    tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } }, 80);
-});
+previewLink.addEventListener('mouseleave', ()=>{tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true');});
 tooltip.addEventListener('mouseenter', showTooltip);
-tooltip.addEventListener('mouseleave', ()=> { tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
+tooltip.addEventListener('mouseleave', ()=>{tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true');});
 
-videoLinkPanel.addEventListener('click', (e)=> {
+// link click
+previewLink.addEventListener('click',(e)=>{e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener');});
+
+// 360 video panel
+videoLinkPanel.addEventListener('click', (e)=>{
   e.stopPropagation();
-  youtubeFrame.src = "https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
+  youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
   youtubeOverlay.style.display='flex';
-  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
+  requestAnimationFrame(()=>youtubeOverlay.style.opacity=1);
 });
-youtubeOverlay.addEventListener('click', ()=> { youtubeOverlay.style.opacity=0; setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; }, 280); });
+youtubeOverlay.addEventListener('click', ()=>{
+  youtubeOverlay.style.opacity=0;
+  setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);
+});
 
-// QR overlay: clicking anywhere dismisses it, including panel
-qrBtn.addEventListener('click', (e)=> { e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1); });
-qrOverlay.addEventListener('click', ()=> { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
-qrContent.addEventListener('click', ()=> { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
+// QR overlay
+qrBtn.addEventListener('click',(e)=>{e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1);});
+qrOverlay.addEventListener('click', ()=>{qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300);});
+qrContent.addEventListener('click', ()=>{qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300);});
 
-fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no')).then(text => { licenseBar.textContent = text; }).catch(()=>{ licenseBar.textContent = 'LICENSE file not found.'; });
+// VR detection
+async function detectVRHeadset(){
+  if(navigator.xr && navigator.xr.isSessionSupported){
+    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR', model:'immersive-vr'};}catch(e){}
+  }
+  const ua=navigator.userAgent||''; if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'};
+  return null;
+}
 
-document.addEventListener('keydown', (e)=> {
-  if (e.key==='Escape') {
-    if (youtubeOverlay.style.display==='flex') { youtubeOverlay.style.opacity=0; setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); }
-    if (qrOverlay.style.display==='flex') { qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',280); }
+// VR button
+vrBtn.addEventListener('click',(e)=>{e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.');});
+
+// ESC keyboard
+document.addEventListener('keydown',(e)=>{
+  if(e.key==='Escape'){
+    if(youtubeOverlay.style.display==='flex'){youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+    if(qrOverlay.style.display==='flex'){qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280);}
   }
 });
 </script>
